{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 96,
  "lineage": "16e191e9-b1f5-08ff-c9b3-e27f423b3723",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Test_EC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0be2609ba883822ec",
            "arn": "arn:aws:ec2:us-east-1:624733648801:instance/i-02f2fda0f1b3bf2b1",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02f2fda0f1b3bf2b1",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ea8360ccbb1e46da",
            "private_dns": "ip-192-168-0-176.ec2.internal",
            "private_ip": "192.168.0.176",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d0a7f0494926bbfb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01fdf7a03f16b5f35",
            "tags": {
              "Name": "TEST_EC2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00a9acb35842b0b47"
            ]
          },
          "dependencies": [
            "module.key.aws_key_pair.test_key_pair",
            "module.sg.aws_security_group.allow_ssh",
            "module.subnet.aws_subnet.subnet_tes",
            "module.vpc.aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "module": "module.eip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0aee9c8b2966e2757",
            "domain": "vpc",
            "id": "eipalloc-05b7a373b73ffe1a1",
            "instance": "i-02f2fda0f1b3bf2b1",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ea8360ccbb1e46da",
            "private_dns": "ip-192-168-0-176.ec2.internal",
            "private_ip": "192.168.0.176",
            "public_dns": "ec2-54-198-249-173.compute-1.amazonaws.com",
            "public_ip": "54.198.249.173",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.ec2.aws_instance.Test_EC2"
          ]
        }
      ]
    },
    {
      "module": "module.ig",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624733648801:internet-gateway/igw-0b2dcfaf1f915f1c3",
            "id": "igw-0b2dcfaf1f915f1c3",
            "owner_id": "624733648801",
            "tags": {
              "Name": "test_IG"
            },
            "vpc_id": "vpc-09e758a1458453d04"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "module": "module.rt",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00c079e5a123ec0e4",
            "owner_id": "624733648801",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b2dcfaf1f915f1c3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT_Test"
            },
            "vpc_id": "vpc-09e758a1458453d04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ig.aws_internet_gateway.ig",
            "module.vpc.aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "module": "module.rt_a",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed4666cbc8be0a32",
            "route_table_id": "rtb-00c079e5a123ec0e4",
            "subnet_id": "subnet-01fdf7a03f16b5f35"
          },
          "dependencies": [
            "module.ig.aws_internet_gateway.ig",
            "module.rt.aws_route_table.rt",
            "module.subnet.aws_subnet.subnet_tes",
            "module.vpc.aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624733648801:security-group/sg-00a9acb35842b0b47",
            "description": "This is a SG for SSH connection",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00a9acb35842b0b47",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "This is a SG for SSH connection",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_test",
            "name_prefix": "",
            "owner_id": "624733648801",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_test"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e758a1458453d04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_tes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624733648801:subnet/subnet-01fdf7a03f16b5f35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-01fdf7a03f16b5f35",
            "map_public_ip_on_launch": false,
            "owner_id": "624733648801",
            "tags": {
              "Name": "Subnet_test"
            },
            "vpc_id": "vpc-09e758a1458453d04"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624733648801:vpc/vpc-09e758a1458453d04",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-035e3676c60399a60",
            "default_route_table_id": "rtb-02eca700ffc8b5df9",
            "default_security_group_id": "sg-05dce66c6d15ba8fd",
            "dhcp_options_id": "dopt-8e9ab9f5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09e758a1458453d04",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02eca700ffc8b5df9",
            "owner_id": "624733648801",
            "tags": {
              "Name": "First_VPC_Test"
            }
          }
        }
      ]
    }
  ]
}